[gd_scene load_steps=3 format=3 uid="uid://c3nt6g24xl3m2"]

[ext_resource type="Script" uid="uid://pyqx1r3s4pm8" path="res://scripts/menu_controller.gd" id="1_7x6vp"]
[ext_resource type="Texture2D" uid="uid://bv6swia3rlpmv" path="res://texture/00000.png" id="1_lg33l"]

[node name="main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_7x6vp")

[node name="Bg" type="TextureRect" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lg33l")
expand_mode = 1

[node name="MainContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -50.0
offset_right = 120.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start_button" type="Button" parent="CanvasLayer/MainMenu/MainContainer"]
layout_mode = 2
text = "Начать игру"

[node name="Extra_button" type="Button" parent="CanvasLayer/MainMenu/MainContainer"]
layout_mode = 2
text = "Экстра"

[node name="Exit_button" type="Button" parent="CanvasLayer/MainMenu/MainContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Выйти из игры"

[node name="Extra_popup" type="PopupPanel" parent="CanvasLayer/MainMenu"]
size = Vector2i(1000, 1000)

[node name="Extra_label" type="RichTextLabel" parent="CanvasLayer/MainMenu/Extra_popup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 996.0
offset_bottom = 996.0
theme_override_font_sizes/bold_italics_font_size = 5
theme_override_font_sizes/italics_font_size = 5
theme_override_font_sizes/mono_font_size = 5
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 5
text = "Правил нет, бей все что движется, а что не движется, двигай и бей

Игра разработана для геймеров хардкорщиков, именно поэтому управление реализовано крайне криво, не всегда пропадает сетка передвижения, также для увеличения сложности в самой игре отсутствуют какие либо индикаторы здоровья и урона (их нужно запомнить в инструкции) в дополнение к этому сами юниты никак не меняются после хода, так что придется так же запомнить кто уже совершил ход (или тыкать всех подряд). Удачной игры!...

ХАРДКОР!

Характеристика Юнитов:
					ЮНИТЫ
Танк
Здоровье 150
Урон 25
Дальность атаки 1
Дальность передвижения 3

Берсерк
Здоровье 75
Урон 75
Дальность атаки 1
Дальность передвижения 5

Ассасин
Здоровье 100
Урон 50
Дальность атаки 1
Дальность передвижения 7

Лучник
Здоровье 100
Урон 50
Дальность атаки 3
Дальность передвижения 5

Арбалетчик
Здоровье 125
Урон 75
Дальность атаки 5
Дальность передвижения 3

Снайпер
Здоровье 100
Урон 100
Дальность атаки 7
Дальность передвижения 3

Жрец
Здоровье 100
Урон 25 
Дальность атаки 3
Дальность передвижения 5


Архимаг
Здоровье 125
Урон 150
Дальность атаки 2
Дальность передвижения 2

Некромант
Здоровье 100
Урон 50
Дальность атаки 3
Дальность передвижения 5

					ВРАГИ
Скелет большой
Здоровье 150
Урон 50
Дальность атаки 1
Дальность передвижения 5

Скелет малый
Здоровье 100
Урон 50
Дальность атаки 1
Дальность передвижения 5

Зомби
Здоровье 150
Урон 75
Дальность атаки 4	
Дальность передвижения 3

Орк
Здоровье 125
Урон 75
Дальность атаки 3 
Дальность передвижения 5

Темный рыцарь
Здоровье 300
Урон 100
Дальность атаки 1
Дальность передвижения 5  
"

[connection signal="pressed" from="CanvasLayer/MainMenu/MainContainer/Start_button" to="CanvasLayer/MainMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MainContainer/Exit_button" to="CanvasLayer/MainMenu" method="_on_exit_button_pressed"]
